feat: add file size filtering and user confirmation for large assets

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ R2_SECRET_ACCESS_KEY=your_secret_access_key
 R2_ENDPOINT=https://your_account_id.r2.cloudflarestorage.com
 R2_BUCKET_NAME=your_bucket_name
 
+# Size Limits
+MAX_VIDEO_SIZE_MB=80
+MAX_AUDIO_SIZE_MB=15
+
 # Local Paths (Optional)
 # FFMPEG_PATH=C:\path\to\ffmpeg.exe
