--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-    "name": "r2-media-butler",
-    "version": "0.1.3",
-    "description": "A sophisticated Node.js CLI utility for processing, compressing, and syncing video assets to Cloudflare R2.",
-    "type": "module",
-    "main": "butler.js",
-    "scripts": {
-        "start": "node butler.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-        "r2",
-        "cloudflare",
-        "video",
-        "ffmpeg",
-        "cli",
-        "butler"
-    ],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@aws-sdk/client-s3": "^3.496.0",
-        "@aws-sdk/lib-storage": "^3.496.0",
-        "commander": "^11.1.0",
-        "dotenv": "^16.3.1",
-        "fluent-ffmpeg": "^2.1.2",
-        "inquirer": "^9.2.12",
-        "lowdb": "^7.0.1",
-        "nanoid": "^5.0.4"
-    }
+  "name": "r2-media-butler",
+  "version": "0.1.3",
+  "description": "A sophisticated Node.js CLI utility for processing, compressing, and syncing video assets to Cloudflare R2.",
+  "type": "module",
+  "main": "butler.js",
+  "scripts": {
+    "start": "node butler.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
+  },
+  "keywords": [
+    "r2",
+    "cloudflare",
+    "video",
+    "ffmpeg",
+    "cli",
+    "butler"
+  ],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.496.0",
+    "@aws-sdk/lib-storage": "^3.496.0",
+    "commander": "^11.1.0",
+    "dotenv": "^16.3.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "inquirer": "^9.2.12",
+    "lowdb": "^7.0.1",
+    "nanoid": "^5.0.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.8.0"
+  }
 }
